Fixed the design gap Issues

--- a/eds/blocks/social-media/social-media.css
+++ b/eds/blocks/social-media/social-media.css
@@ -3,10 +3,6 @@
   margin-right: auto
 }
 
-.social-media-wrapper :is(.mb-8) {
-  margin-bottom: 2rem
-}
-
 .social-media-wrapper :is(.block) {
   display: block
 }
@@ -30,14 +26,6 @@
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse))
 }
 
-.social-media-wrapper :is(.pb-0) {
-  padding-bottom: 0px
-}
-
-.social-media-wrapper :is(.pt-4) {
-  padding-top: 1rem
-}
-
 .social-media-wrapper :is(.text-base) {
   font-size: 1rem;
   line-height: 1.5rem
@@ -50,10 +38,4 @@
 .social-media-wrapper :is(.text-gray-600) {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity))
-}
-
-@media (min-width: 768px) {
-  .social-media-wrapper :is(.md\:pb-10) {
-    padding-bottom: 2.5rem
-  }
 }
