--- a/eds/styles/styles.css
+++ b/eds/styles/styles.css
@@ -600,6 +600,12 @@ main .section .button-tertiary-outline:hover {
   background-color: rgb(7 17 18 / 5%);
 }
 
+@media (min-width: 1024px) {
+  main .section .button-tertiary-outline {
+    margin-top: 3.5rem;
+  }
+}
+
 main .section .button-tertiary-filled {
   width: -moz-fit-content;
   width: fit-content;
@@ -800,10 +806,6 @@ header {
   header {
     height: 8rem;
   }
-}
-
-.default-content-wrapper:first-child {
-  padding-bottom: 2rem;
 }
 
 .default-content-wrapper h1:first-of-type {
@@ -1142,7 +1144,7 @@ dialog .modal-content .section > .default-content-wrapper p {
 
 @media (min-width: 1024px) {
   .stories main .section.no-section-padding .columns-wrapper {
-    height: 28rem;
+    height: 31rem;
   }
 }
 
@@ -1254,10 +1256,6 @@ audio::-webkit-media-controls-panel {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
 }
 
 .mb-2 {
@@ -1589,6 +1587,10 @@ audio::-webkit-media-controls-panel {
 .gap-x-3 {
   -moz-column-gap: 0.75rem;
        column-gap: 0.75rem;
+}
+
+.gap-y-8 {
+  row-gap: 2rem;
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
