--- a/eds/templates/stories/stories.css
+++ b/eds/templates/stories/stories.css
@@ -7,12 +7,24 @@
   margin-top: 0.5rem
 }
 
+.flex {
+  display: flex
+}
+
 .w-auto {
   width: auto
 }
 
 .w-full {
   width: 100%
+}
+
+.flex-col {
+  flex-direction: column
+}
+
+.gap-y-3 {
+  row-gap: 0.75rem
 }
 
 .border-b {
@@ -33,9 +45,18 @@
   padding-bottom: 1rem
 }
 
+.pb-3 {
+  padding-bottom: 0.75rem
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem
 }
 
 .font-bold {
